Search & filter page is completed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="pale_grey">#f6f8fd</color>
     <color name="light_gray">#d5d5d5</color>
     <color name="light_blue">#76d1e1</color>
+    <color name="dark_primary">#FFBB86FC</color>
 
 </resources>
